# SpaceBug

./: BossOne.cpp  BossOne.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionTesting.cpp  Gunfire.cpp  Gunfire.h  Missile.cpp  Missile.h  README.md  SpaceCraft.cpp  SpaceCraft.h  main.cpp
Chaff Animation/: Chaff.cpp  Chaff.h  ChaffSprite.cpp  ChaffSprite.h
Coordinate Variables Package/: CoordinateInterpretation.cpp  CoordinateInterpretation.h  CoordinateVariables.cpp  CoordinateVariables.h  CoordinateVariablesTesting.cpp  LengthAndSpacing.cpp  LengthAndSpacing.h  TranslationHandling.cpp  TranslationHandling.h
Craft Explosion Animation/: CraftExplosion.cpp  CraftExplosion.h  DebrisSprite.cpp  DebrisSprite.h
Game Logic Package/: EventHandling.cpp  EventHandling.h  GameLogic.cpp  GameLogic.h  RoundOne.cpp  RoundOne.h
Utility Files/: SpriteSize.h  StaticTranslationHandling.cpp  StaticTranslationHandling.h  Utilities.cpp  Utilities.h
data/: VCoords.csv
